# api/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:80",
     "basePath": "/",
     "paths": {
-        "/api/auth/verify": {
+        "/api/v1/auth/verify": {
             "post": {
                 "security": [
                     {
@@ -31,7 +31,7 @@
                 }
             }
         },
-        "/api/target/{id}": {
+        "/api/v1/target/{id}": {
             "put": {
                 "security": [
                     {
@@ -142,7 +142,7 @@
                 }
             }
         },
-        "/api/targets": {
+        "/api/v1/targets": {
             "get": {
                 "description": "Returns all monitored targets along with their most recent health checks (up to 1500 per target).",
                 "produces": [
